--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,5 @@
-name: helloworld # 这是你的插件的唯一识别名。
-desc: 这是 AstrBot 的默认插件，支持关键词回复。 # 插件简短描述
-version: v1.3 # 插件版本号。格式：v1.1.1 或者 v1.1
-author: Soulter # 作者
-repo: https://github.com/Soulter/helloworld # 插件的仓库地址
+name: plugin_test_helper
+author: LumineStory
+version: 1.0.0
+repository: https://github.com/oyxning/astrbot_plugin_test_helper
+description: 一个通过指令热更新其他插件的开发辅助工具。
